@@ -2,6 +2,7 @@
 ----------------
 o Added the possibility to return all graph elements using RETURN *
 o Added CREATE, SET, DELETE, FOREACH 
+o Fixes issue #432, #446
 
 1.7 (2012-04-18)
 ----------------
